--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -23,9 +23,9 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.40",
-    "autoprefixer": "10.4.3",
+    "autoprefixer": "^10.4.4",
     "next-transpile-modules": "9.0.0",
-    "postcss": "8.4.11",
+    "postcss": "^8.4.12",
     "shared-config": "^0.0.1",
     "tailwindcss": "3.0.23"
   }
