--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -15,13 +15,13 @@
     "@heroicons/react": "1.0.6",
     "@mui/icons-material": "5.5.1",
     "@mui/material": "5.5.1",
-    "@next-auth/mongodb-adapter": "1.0.1",
+    "@next-auth/mongodb-adapter": "^1.0.2",
     "express": "4.17.3",
     "framer-motion": "6.2.8",
     "lodash": "4.17.21",
     "mongodb": "4.4.1",
     "next": "12.1.0",
-    "next-auth": "4.2.1",
+    "next-auth": "^4.3.0",
     "next-themes": "0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,9 +30,9 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
-    "autoprefixer": "^10.4.3",
+    "autoprefixer": "^10.4.4",
     "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.4.11",
+    "postcss": "^8.4.12",
     "shared-config": "^0.0.1",
     "tailwindcss": "^3.0.23"
   }
