--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
     "jest-watch-typeahead": "1.0.0",
-    "lint-staged": "12.3.5",
+    "lint-staged": "^12.3.6",
     "msw": "0.39.2",
-    "prettier": "2.5.1",
-    "prettier-plugin-organize-imports": "2.3.4",
+    "prettier": "^2.6.0",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
