--- a/.github/workflows/root.yaml
+++ b/.github/workflows/root.yaml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - run: yarn build
-      - run: yarn test
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+      - name: Build
+        run: npm run build
+      - name: Unit tests
+        run: npm run test
