--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -28,10 +28,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Build
         working-directory: ./apps/server
-        run: yarn build
+        run: npm run build
       - name: Test
         working-directory: ./apps/server
-        run: yarn test
+        run: npm run test
