--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -17,10 +17,6 @@ jobs:
       matrix:
         node-version: [16.x]
 
-    defaults:
-      run:
-        working-directory: ./apps/server
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -30,8 +26,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        working-directory: ./apps/server
-        run: npm run build
+        run: npm run build -- --scope=server
       - name: Test
-        working-directory: ./apps/server
-        run: npm run test
+        run: npm run test -- --scope=server
