--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -14,18 +14,18 @@
     "@emotion/styled": "11.8.1",
     "@heroicons/react": "1.0.6",
     "@mui/icons-material": "5.5.1",
-    "@mui/material": "5.5.1",
+    "@mui/material": "5.5.3",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "express": "4.17.3",
     "framer-motion": "6.2.8",
     "lodash": "4.17.21",
     "mongodb": "4.4.1",
-    "next": "12.1.0",
+    "next": "12.1.4",
     "next-auth": "^4.3.1",
     "next-themes": "0.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "recoil": "0.6.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "recoil": "0.7.0",
     "timeago-react": "3.0.4"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "autoprefixer": "^10.4.4",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
-    "shared-config": "^0.0.1",
+    "shared-config": "*",
     "tailwindcss": "^3.0.23"
   }
 }
