--- a/package.json
+++ b/package.json
@@ -16,47 +16,53 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install"
   },
   "devDependencies": {
-    "@testing-library/dom": "8.11.3",
-    "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.4",
+    "@testing-library/dom": "8.12.0",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "13.0.0",
     "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "13.5.0",
+    "@testing-library/user-event": "14.0.4",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
-    "@types/lodash": "4.14.180",
-    "@types/node": "17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "esbuild": "0.14.27",
+    "@types/lodash": "4.14.181",
+    "@types/node": "17.0.23",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "esbuild": "0.14.30",
     "esbuild-jest": "0.5.0",
-    "eslint": "^8.11.0",
-    "eslint-config-next": "^12.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-testing-library": "^5.1.0",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-jest-dom": "4.0.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-testing-library": "5.2.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
     "jest-watch-typeahead": "1.0.0",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "12.3.7",
     "msw": "0.39.2",
-    "prettier": "^2.6.0",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "ts-jest": "27.1.3",
+    "prettier": "2.6.2",
+    "prettier-plugin-organize-imports": "2.3.4",
+    "ts-jest": "27.1.4",
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
-    "tsconfig-paths": "3.14.0",
-    "turbo": "1.1.6",
-    "typescript": "4.6.2",
-    "webpack": "5.70.0"
+    "tsconfig-paths": "3.14.1",
+    "turbo": "1.1.10",
+    "typescript": "4.6.3",
+    "webpack": "5.71.0"
+  },
+  "overrides": {
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "@testing-library/react": "13.0.0"
   },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
