--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -35,12 +35,8 @@
     "@types/lodash": "^4.14.180",
     "@types/response-time": "^2.3.5",
     "jest": "^27.5.1",
-    "shared-config": "^0.0.1",
+    "shared-config": "*",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
-  },
-  "peerDependencies": {
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.4"
   }
 }
