--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,15 +5,15 @@
   "types": "./index.tsx",
   "license": "MIT",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "shared-config": "^0.0.1",
-    "tailwindcss": "^3.0.23"
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "autoprefixer": "10.4.4",
+    "postcss": "8.4.12",
+    "shared-config": "*",
+    "tailwindcss": "3.0.23"
   }
 }
