--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
+    "@fontsource/roboto": "4.5.5",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "server": "1.0.37",
-    "ui": "0.0.1"
+    "@nodesoft/ui": "*"
   },
   "devDependencies": {
+    "@nodesoft/shared-config": "*",
     "@testing-library/dom": "8.12.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "13.0.0",
@@ -26,7 +28,6 @@
     "autoprefixer": "10.4.4",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.12",
-    "@nodesoft/shared-config": "*",
     "tailwindcss": "3.0.23"
   }
 }
