--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=16",
-    "pnpm": ">=7"
+    "npm": ">=8"
   },
   "workspaces": [
     "apps/*",
@@ -27,11 +27,11 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.25",
-    "@types/react": "18.0.6",
-    "@types/react-dom": "18.0.2",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
+    "@types/node": "17.0.30",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
     "esbuild": "0.14.38",
     "esbuild-jest": "0.5.0",
     "eslint": "8.14.0",
@@ -47,17 +47,17 @@
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
-    "jest-watch-typeahead": "1.0.0",
-    "lint-staged": "12.4.0",
+    "jest-watch-typeahead": "1.1.0",
+    "lint-staged": "12.4.1",
     "msw": "0.39.2",
     "prettier": "2.6.2",
     "prettier-plugin-organize-imports": "2.3.4",
     "ts-jest": "27.1.4",
-    "ts-loader": "9.2.8",
+    "ts-loader": "9.3.0",
     "ts-node": "10.7.0",
     "tsconfig-paths": "3.14.1",
-    "turbo": "1.2.5",
-    "typescript": "4.6.3",
+    "turbo": "1.2.6",
+    "typescript": "4.6.4",
     "webpack": "5.72.0"
   },
   "lint-staged": {
@@ -70,10 +70,6 @@
     "*.json": [
       "prettier --write"
     ]
-  },
-  "overrides": {
-    "@types/react": "18.0.6",
-    "@types/react-dom": "18.0.2"
   },
   "packageManager": "npm@8.5.4"
 }
