--- a/packages/nest-problem-details/package.json
+++ b/packages/nest-problem-details/package.json
@@ -19,9 +19,9 @@
     "class-validator": "0.13.2",
     "express": "4.18.1",
     "lodash": "4.17.21",
-    "type-fest": "2.12.2",
-    "reflect-metadata": "0.1.12",
-    "rxjs": "7.1.0"
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.5.5",
+    "type-fest": "2.12.2"
   },
   "devDependencies": {
     "@nestjs/testing": "8.4.4",
