--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@babel/core": "7.17.10",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
     "@fontsource/roboto": "4.5.5",
@@ -21,8 +22,7 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "server": "1.0.37",
-    "@babel/core": "7.0.0"
+    "server": "1.0.37"
   },
   "devDependencies": {
     "@nodesoft/shared-config": "*",
