--- a/apps/next-antd-tailwindcss/package.json
+++ b/apps/next-antd-tailwindcss/package.json
@@ -4,19 +4,22 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "@next/bundle-analyzer": "12.1.5",
     "antd": "4.20.2",
-    "autoprefixer": "10.4.5",
+    "autoprefixer": "10.4.7",
     "cross-env": "7.0.3",
+    "csstype": "3.0.11",
     "dayjs": "1.11.1",
     "esm": "3.2.25",
     "next": "12.1.5",
     "postcss": "8.4.13",
     "postcss-preset-env": "7.4.4",
+    "rc-picker": "2.6.8",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "tailwindcss": "3.0.24"
@@ -29,7 +32,10 @@
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
-  }
+  },
+  "packageManager": "pnpm@7.0.0"
 }
