--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=16",
-    "npm": ">=8"
+    "pnpm": ">=7"
   },
   "workspaces": [
     "apps/*",
@@ -30,8 +30,8 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
-    "@typescript-eslint/eslint-plugin": "5.21.0",
-    "@typescript-eslint/parser": "5.21.0",
+    "@typescript-eslint/eslint-plugin": "5.22.0",
+    "@typescript-eslint/parser": "5.2.0",
     "esbuild": "0.14.38",
     "esbuild-jest": "0.5.0",
     "eslint": "8.14.0",
@@ -71,5 +71,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "npm@8.5.4"
+  "packageManager": "pnpm@7.0.0"
 }
