--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=16",
-    "pnpm": ">=7"
+    "npm": ">=8"
   },
   "workspaces": [
     "apps/*",
@@ -18,9 +18,15 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
-    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install --force"
+    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install --force",
+    "clean:repo": "del-cli junit.xml package-lock.json yarn.lock node_modules **/dist **/node_modules **/.next **/.turbo && npm install && npm run build && npm run test"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "0.4.5",
+    "@changesets/cli": "2.23.2",
+    "@commitlint/cli": "17.0.3",
+    "@commitlint/config-conventional": "17.0.3",
+    "@playwright/test": "1.23.4",
     "@testing-library/dom": "8.13.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
@@ -28,37 +34,45 @@
     "@types/jest": "27.5.0",
     "@types/lodash": "4.14.182",
     "@types/node": "17.0.31",
+    "@types/prettier": "2.6.3",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/shell-quote": "1.7.1",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
-    "esbuild": "0.14.38",
+    "@your-org/eslint-config-bases": "workspace:^",
+    "del-cli": "4.0.1",
+    "esbuild": "0.14.49",
     "esbuild-jest": "0.5.0",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-import-resolver-typescript": "3.3.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "26.1.5",
-    "eslint-plugin-jest-dom": "4.0.1",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-jest": "26.6.0",
+    "eslint-plugin-jest-dom": "4.0.2",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-testing-library": "5.3.1",
-    "husky": "7.0.4",
+    "eslint-plugin-testing-library": "5.5.1",
+    "husky": "8.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.5.1",
-    "jest-watch-typeahead": "1.1.0",
-    "lint-staged": "12.4.1",
+    "is-ci": "3.0.1",
+    "jest": "28.1.3",
+    "jest-watch-typeahead": "2.0.0",
+    "lint-staged": "13.0.3",
     "msw": "0.39.2",
-    "prettier": "2.6.2",
-    "prettier-plugin-organize-imports": "2.3.4",
-    "ts-jest": "27.1.4",
-    "ts-loader": "9.3.0",
-    "ts-node": "10.7.0",
-    "tsconfig-paths": "3.14.1",
-    "turbo": "1.2.8",
-    "typescript": "4.6.4",
-    "webpack": "5.72.0"
+    "npm-run-all": "4.1.5",
+    "prettier": "2.7.1",
+    "prettier-plugin-organize-imports": "3.0.0",
+    "rimraf": "3.0.2",
+    "shell-quote": "1.7.3",
+    "ts-jest": "28.0.7",
+    "ts-loader": "9.3.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.0.0",
+    "turbo": "1.3.4",
+    "typescript": "4.7.4",
+    "webpack": "5.73.0"
   },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
@@ -71,5 +85,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "pnpm@7.0.0"
+  "packageManager": "yarn@3.2.2"
 }
