--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install",
     "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install --force",
-    "clean:repo": "del-cli junit.xml package-lock.json yarn.lock node_modules **/dist **/node_modules **/.next **/.turbo && npm install && npm run build && npm run test"
+    "clean:repo": "del-cli junit.xml package-lock.json yarn.lock node_modules **/dist **/node_modules **/.next **/.turbo && npm install && npm run build && npm run test",
+    "postinstall": "is-ci || yarn husky install"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.5",
@@ -27,21 +27,21 @@
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@playwright/test": "1.23.4",
-    "@testing-library/dom": "8.13.0",
+    "@testing-library/dom": "8.16.0",
     "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
+    "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
-    "@types/jest": "27.5.0",
+    "@types/jest": "28.1.6",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.31",
+    "@types/node": "18.0.6",
     "@types/prettier": "2.6.3",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@types/shell-quote": "1.7.1",
-    "@typescript-eslint/eslint-plugin": "5.22.0",
-    "@typescript-eslint/parser": "5.22.0",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "@your-org/eslint-config-bases": "workspace:^",
-    "del-cli": "4.0.1",
+    "del-cli": "5.0.0",
     "esbuild": "0.14.49",
     "esbuild-jest": "0.5.0",
     "eslint": "8.20.0",
@@ -60,7 +60,7 @@
     "jest": "28.1.3",
     "jest-watch-typeahead": "2.0.0",
     "lint-staged": "13.0.3",
-    "msw": "0.39.2",
+    "msw": "0.44.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.0.0",
